[tool.poetry]
name = "asahi"
version = "0.2.0"
description = "A small package to provide utility functions to libraries that has optional installs / extras"
authors = ["Carl Oscar Aaro <hello@carloscar.com>"]
homepage = "https://github.com/kalaspuff/asahi"
repository = "https://github.com/kalaspuff/asahi"
keywords = ["asahi", "extras", "optional installs", "extras requires", "extra packages", "optional packages", "lazy import"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
]

packages = [
    { include = "asahi" },
]

include = [
    "asahi/py.typed",
    "asahi/*.py",
    "asahi/*.pyi",
]

exclude = [
    "**/.DS_Store",
    "**/.gitignore",
    "**/poetry.lock",
    "**/*.pyc",
    "**/__pycache__",
    "asahi/extras/**/*.py",
    "asahi/extras/**/*.pyi",
]

[tool.poetry.dependencies]
python = "^3.7"
asahi-extras = { version = ">=0.1.0", optional = true }

[tool.poetry.extras]
extras = ["asahi-extras"]

[tool.poetry.dev-dependencies]
flake8 = { version = ">=3.8.4", markers = "sys_platform != \"win32\"" }
flake8-black = { version = ">=0.2.0", markers = "sys_platform != \"win32\"" }
flake8-isort = { version = ">=4.0.0", markers = "sys_platform != \"win32\"" }
flake8-pyproject = { version = ">=1.1.0", markers = "sys_platform != \"win32\"" }
isort = { version = ">=5.6.0", markers = "sys_platform != \"win32\"" }
pytest = { version = ">=6.1.0", markers = "sys_platform != \"win32\"" }
pytest-cov = { version = ">=2.10.0", markers = "sys_platform != \"win32\"" }
black = { version = "*", markers = "sys_platform != \"win32\"", allow-prereleases = true }
mypy = { version = ">=0.800", markers = "sys_platform != \"win32\"" }
codecov = { version = ">=2.1.10", markers = "sys_platform != \"win32\"" }

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '\.eggs/|\.egg-info/|\.git/|\.github/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycache__/|build/|dist/|setup\.py'

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["asahi", "tests"]
known_first_party = "asahi,asahi_extras,asahi.extras"
skip = [".mypy_cache", ".pytest_cache", "__pycache__", "asahi.egg-info", "asahi_extras.egg-info", "asahi-extras.egg-info", "asahiextras.egg-info", ".eggs", ".git", ".venv", ".vscode", "build", "dist", "tmp"]

[tool.mypy]
pretty = true
files = ["$MYPY_CONFIG_FILE_DIR/asahi", "$MYPY_CONFIG_FILE_DIR/tests"]
ignore_missing_imports = true
show_error_codes = true
no_implicit_reexport = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
local_partial_types = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true

[tool.flake8]
ignore = ["E203", "E501", "W503"]
exclude = ["asahi.egg-info", "asahi_extras.egg-info", "asahi-extras.egg-info", "asahiextras.egg-info", ".git", ".mypy_cache", ".pytest_cache", ".venv", ".vscode", "__pycache__", "build", "dist", "tmp"]

[tool.coverage.run]
omit = ["tests/*"]
